add 8a parity!!! (credit to notcoded) update fabric api to 42.0